# manga_tracker

./: Dockerfile  README.md  pyproject.toml
manga_tracker/: __main__.py
manga_tracker/application/use_case/: __init__.py  _update_mangas.py
manga_tracker/domain/: __init__.py  _common.py  _entity.py  _repository.py  _service.py
manga_tracker/infrastructure/entrance/: __init__.py  _run.py
manga_tracker/infrastructure/repository/: __init__.py  _sql.py  _sqlite.py
manga_tracker/infrastructure/setup/: __init__.py  _env.py
manga_tracker/infrastructure/shared/: result.py
tests/application/use_case/: test_update_mangas.py
tests/fake/: crawler.py  manga.py  repository.py
tests/integration/: conftest.py  test_repository.py
